--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mongoose": "^4.9.4",
     "nunjucks": "^3.0.0",
     "react-router-redux": "^4.0.8",
-    "redux-logger": "^2.8.1"
+    "redux-logger": "^2.8.1",
+    "superagent": "^3.4.4"    
   },
   "devDependencies": {
     "autoprefixer": "^6.7.5",
@@ -70,7 +71,6 @@
     "reselect": "^2.5.4",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.1",
-    "superagent": "^3.4.4",
     "supertest": "^3.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
