--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "inline-css": "^2.2.2",
     "jsonwebtoken": "^7.4.0",
     "koa": "^2.0.0",
+    "koa-bodyparser": "^2.5.0",
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
     "koa-joi-router": "git+https://github.com/sahal/joi-router.git#support/4.0.0",
@@ -37,7 +38,7 @@
     "nunjucks": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "redux-logger": "^2.8.1",
-    "superagent": "^3.4.4"    
+    "superagent": "^3.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.5",
